<resources>
    <string name="app_name">AnatomieApp</string>
    <string name="nav_header_title">Aan de slag!</string>
    <string name="nav_header_subtitle">Zie hieronder alle levels</string>
    <string name="menu_home">Home</string>
    <string name="welcome_text">Welkom bij de Anatomie App!</string>
    <string name="splash_screen_info_text">Gemaakt door AC App Development 2021</string>
    <string name="splash_screen_welcome_text">Dé leukste manier om het menselijk lichaam te oefenen!</string>
    <string name="anatomie_app_name_splash">ANATOMIE APP</string>
    <string name="level_1_menu">Level 1</string>
    <string name="level_2_menu">Level 2</string>
    <string name="wat_is_nummer">Wat is nummer</string>
    <string name="homescreen_subtitle">Oefen je kennis van het menselijke lichaam! \n Volg hieronder je voortgang</string>
    <string name="start_again">Begin opnieuw</string>string>
    <string name="cancel">Annuleer</string>string>
    <string name="confirmation">Ja, ik weet het zeker!</string>string>
    <string name="sure_to_delete_progress">Weet je zeker dat je je vooruitgang wilt verwijderen?</string>
    <string name="goodjob">Goedzo! Ga zo door!</string>
    <string name="try_again">Fout! Probeer het nog eens!</string>
    <string name="level_completed">Goed opweg! Je hebt de level gehaald, ga nu door naar het volgende level!</string>
    <string name="next_level">Ga naar volgend level</string>
    <string name="level_congratulations">Level Gehaald!</string>
    <string name="click_alert">Swipe naar links of naar rechts, als je denkt dat het antwoord goed is!</string>
    <string name="progress_text_text">Voortgang:</string>
    <string name="motivation_0">Je bent nog niet begonnen aan dit level</string>
    <string name="motivation_mid">je bent op de helft, ga zo door!</string>
    <string name="motivation_100">Level afgerond!</string>
</resources>