<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.anatomieapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.anatomieapp.ui.level1.Level1"
        android:label="@string/level_1_menu"
        tools:layout="@layout/fragment_level1" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.anatomieapp.ui.level2.Level2"
        android:label="@string/level_2_menu"
        tools:layout="@layout/fragment_level2" />
</navigation>